I've refactored your JPA entities and services to align with the new DB schema.
Here's what I did:
- I updated V1__Initial_schema.sql with the new database structure.
- I modified the Etudiant, Cours, Horaire, Inscription, and Note entities to match the new schema relationships.
- I refactored the corresponding services, repositories, and controllers to accommodate these changes.
- I updated your unit tests to reflect the modifications, ensuring all tests pass.